# pipeline-management

./: .gitignore  Jenkinsfile  README.md
infra-gateway/: README.md  docker-compose.yaml  hot-reload.sh  pyproject.toml  run-live-test.sh  setup.py  watcher-agent.py
infra-gateway/architecture/: failure-modes.md  kubernetes-networking-and-services.md  layers.md  load-balancing-and-domains.md  traffic-flow.md  upcoming-roadmap-matrix.md
infra-gateway/auth/: strategy.md
infra-gateway/auth/flows/jwt/: flow
infra-gateway/edge/rate-limiting/zones/: per-ip  per-route  per-tenant
infra-gateway/edge/request-enrichment/: policy
infra-gateway/edge/security-headers/: policy
infra-gateway/edge/tls/: termination-config
infra-gateway/observability/: access-log-format
infra-gateway/observability/metrics/: what-to-expose
infra-gateway/observability/tracing/: propagation
infra-gateway/routing/health-checks/order-service/: config
infra-gateway/routing/health-checks/user-service/: config
infra-gateway/routing/rules/example-app/: routes
infra-gateway/routing/rules/python-app/: routes
infra-gateway/routing/timeouts/: hierarchy
infra-gateway/runtime-adapters/: README.md  compiler.py
infra-gateway/runtime-adapters/adapters/: nginx_adapter.py  traefik_adapter.py
infra-gateway/runtime-adapters/apache/: README.md  httpd.conf
infra-gateway/runtime-adapters/nginx/: README.md  nginx.conf
infra-gateway/runtime-adapters/traefik/: README.md  traefik.yaml
infra-gateway/src/gateway_cli/: __init__.py  main.py
infra-gateway/tests/: test_compiler.py
(+45 files in other folders)
